styles fixed and responsive on mobile

--- a/src/components/DeviceBar/DeviceBar.scss
+++ b/src/components/DeviceBar/DeviceBar.scss
@@ -25,7 +25,7 @@
     font-weight: 700;
     width: 15%;
     text-align: start;
-    padding-left: 0.7rem;
+    padding-left: 1.3rem;
 
     @include mobile {
       width: 40%;
@@ -123,8 +123,9 @@
   &__security-risk {
     border-radius: 13px;
     padding: 5px;
+    margin-right: 1rem;
     width: 6.25rem;
-    margin-left: 1rem;
+    margin-left: 2.5rem;
 
     @include mobile {
       margin-right: 1rem;
